# parser

./: .gitignore  Cargo.toml  README.md  flake.nix  meson.build  opencv_issues.txt
src/: cli.rs  data.rs  main.cpp  main.rs  status.rs  utils.rs
src/data/: convert.rs  mod.rs  structs.rs
src/utils/: angle.rs  mod.rs  structs.rs  transforms.rs  trig.rs
trace/: README.txt
