[package]
name = "reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
num-traits = "0.2.15"
opencv = { version = "0.83.0", default-features = false, features = ["objdetect", "imgproc", "imgcodecs", "features2d"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
